# django-nosql-storage

./: .gitignore  CHANGES.RST  README.md  codecov.yml  manage.py  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
nosql_objects/: apps.py  signals.py  views.py
nosql_objects/migrations/: 0001_initial.py  0002_rename_document_object_data_and_more.py  0003_remove_objectclass_max_object_size_and_more.py
requirements/: ci.txt  dev.txt
tests/: settings.py  tests.py  urls.py
