[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[flake8]
max_line_length = 120
max_complexity = 10

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html